try to fix resume spacing again

--- a/style.css
+++ b/style.css
@@ -119,13 +119,13 @@ ul
 .resume_left
 {
 	width: 220;
-  	height: 390px;
+  	height: 420px;
   	float: left;
 }
 
 .resume_right
 {
-  	height: 390px;
+  	height: 410px;
 }
 
 .contentTitle
